test: 의상 추천 - Service 태스트 코드 수정